Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-31000

Assertion failure on ALTER TABLE…PAGE_COMPRESSED=1

    XMLWordPrintable

Details

    Description

      SET GLOBAL innodb_file_per_table=0;
      CREATE TABLE t (c INT) ENGINE=INNODB;
      SET GLOBAL innodb_file_per_table=1;
      ALTER TABLE t page_compressed=1;
      

      Leads to:

      11.1.0 2b61ff8f2221745f0a96855a0feb0825c426f993 (Debug)

      mariadbd: /test/11.1_dbg/storage/innobase/handler/handler0alter.cc:10684: bool commit_cache_norebuild(Alter_inplace_info*, ha_innobase_inplace_ctx*, const TABLE*, const TABLE*, trx_t*): Assertion `ctx->new_table->space != fil_system.sys_space' failed.
      

      11.1.0 2b61ff8f2221745f0a96855a0feb0825c426f993 (Debug)

      Core was generated by `/test/MD040423-mariadb-11.1.0-linux-x86_64-dbg/bin/mariadbd --no-defaults --cor'.
      Program terminated with signal SIGABRT, Aborted.
      #0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      [Current thread is 1 (Thread 0x1470840a7700 (LWP 283742))]
      (gdb) bt
      #0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #1  0x000014709de37859 in __GI_abort () at abort.c:79
      #2  0x000014709de37729 in __assert_fail_base (fmt=0x14709dfcd588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x55e1c47b4e28 "ctx->new_table->space != fil_system.sys_space", file=0x55e1c47ac0e0 "/test/11.1_dbg/storage/innobase/handler/handler0alter.cc", line=10684, function=<optimized out>) at assert.c:92
      #3  0x000014709de48fd6 in __GI___assert_fail (assertion=assertion@entry=0x55e1c47b4e28 "ctx->new_table->space != fil_system.sys_space", file=file@entry=0x55e1c47ac0e0 "/test/11.1_dbg/storage/innobase/handler/handler0alter.cc", line=line@entry=10684, function=function@entry=0x55e1c47b4d68 "bool commit_cache_norebuild(Alter_inplace_info*, ha_innobase_inplace_ctx*, const TABLE*, const TABLE*, trx_t*)") at assert.c:101
      #4  0x000055e1c401dd67 in commit_cache_norebuild (ha_alter_info=ha_alter_info@entry=0x1470840a2df0, ctx=ctx@entry=0x1470140145f8, altered_table=altered_table@entry=0x1470840a2eb0, table=0x147014023de8, trx=trx@entry=0x1470956e3680) at /test/11.1_dbg/storage/innobase/handler/handler0alter.cc:10684
      #5  0x000055e1c4004268 in ha_innobase::commit_inplace_alter_table (this=0x147014024600, altered_table=0x1470840a2eb0, ha_alter_info=0x1470840a2df0, commit=<optimized out>) at /test/11.1_dbg/storage/innobase/handler/handler0alter.cc:11500
      #6  0x000055e1c3cd3305 in handler::ha_commit_inplace_alter_table (this=0x147014024600, altered_table=altered_table@entry=0x1470840a2eb0, ha_alter_info=ha_alter_info@entry=0x1470840a2df0, commit=commit@entry=true) at /test/11.1_dbg/sql/handler.cc:5428
      #7  0x000055e1c3ab56a7 in mysql_inplace_alter_table (thd=thd@entry=0x147014000d48, table_list=0x147014013250, table=table@entry=0x147014023de8, altered_table=altered_table@entry=0x1470840a2eb0, ha_alter_info=ha_alter_info@entry=0x1470840a2df0, target_mdl_request=target_mdl_request@entry=0x1470840a3690, ddl_log_state=0x1470840a2d80, trigger_param=0x1470840a3270, alter_ctx=0x1470840a4570, partial_alter=@0x1470840a2cef: false, start_alter_id=@0x1470840a2cf8: 0, if_exists=false) at /test/11.1_dbg/sql/sql_table.cc:7810
      #8  0x000055e1c3ac881e in mysql_alter_table (thd=thd@entry=0x147014000d48, new_db=new_db@entry=0x147014005868, new_name=new_name@entry=0x147014005cb8, create_info=create_info@entry=0x1470840a5370, table_list=<optimized out>, table_list@entry=0x147014013250, recreate_info=recreate_info@entry=0x1470840a5260, alter_info=<optimized out>, order_num=<optimized out>, order=<optimized out>, ignore=<optimized out>, if_exists=<optimized out>) at /test/11.1_dbg/sql/sql_table.cc:10846
      #9  0x000055e1c3b4ba9e in Sql_cmd_alter_table::execute (this=<optimized out>, thd=0x147014000d48) at /test/11.1_dbg/sql/structs.h:567
      #10 0x000055e1c39e8a73 in mysql_execute_command (thd=thd@entry=0x147014000d48, is_called_from_prepared_stmt=is_called_from_prepared_stmt@entry=false) at /test/11.1_dbg/sql/sql_parse.cc:5760
      #11 0x000055e1c39d217c in mysql_parse (thd=thd@entry=0x147014000d48, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x1470840a62f0) at /test/11.1_dbg/sql/sql_parse.cc:7760
      #12 0x000055e1c39df718 in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x147014000d48, packet=packet@entry=0x14701400ae39 "ALTER TABLE t page_compressed=1", packet_length=packet_length@entry=31, blocking=blocking@entry=true) at /test/11.1_dbg/sql/sql_class.h:1370
      #13 0x000055e1c39e1b54 in do_command (thd=0x147014000d48, blocking=blocking@entry=true) at /test/11.1_dbg/sql/sql_parse.cc:1405
      #14 0x000055e1c3b449c1 in do_handle_one_connection (connect=<optimized out>, connect@entry=0x55e1c6888118, put_in_cache=put_in_cache@entry=true) at /test/11.1_dbg/sql/sql_connect.cc:1416
      #15 0x000055e1c3b44e90 in handle_one_connection (arg=0x55e1c6888118) at /test/11.1_dbg/sql/sql_connect.cc:1318
      #16 0x000014709e348609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #17 0x000014709df34133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Bug confirmed present in:
      MariaDB: 10.4.29 (dbg), 10.5.20 (dbg), 10.6.13 (dbg), 10.8.8 (dbg), 10.9.6 (dbg), 10.10.4 (dbg), 10.11.3 (dbg), 11.0.2 (dbg), 11.1.0 (dbg)

      Bug (or feature/syntax) confirmed not present in:
      MariaDB: 10.4.29 (opt), 10.5.20 (opt), 10.6.13 (opt), 10.8.8 (opt), 10.9.6 (opt), 10.10.4 (opt), 10.11.3 (opt), 11.0.2 (opt), 11.1.0 (opt)

      Attachments

        Activity

          People

            marko Marko Mäkelä
            ramesh Ramesh Sivaraman
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 6.25h
                6.25h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.